syntax = "proto3";

package sapphillon.v1;

import "sapphillon/v1/permission.proto";

message plugin_function {
    string function_id = 1; // Unique identifier for the function
    string function_name = 2; // Name of the function
    string description = 3; // Description of what the function does
    repeated Permission permissions = 4; // Permissions required to execute this function
}

message plugin_package {
    string package_id = 0;
    string package_name = 1;
    string package_version = 2;
    string description = 3;
    repeated plugin_function functions = 4;
    string plugin_store_url = 5;
    optional bool internal_plugin = 6;
    optional bool verified = 7;
    optional bool deprecated = 8;
    google.protobuf.Timestamp installed_at = 9;
    google.protobuf.Timestamp updated_at = 10;





}